k8s/movies/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies
  namespace: sa-p5
  labels:
    app: movies
    app.kubernetes.io/name: movies
    app.kubernetes.io/part-of: sa-p5
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movies
  template:
    metadata:
      labels:
        app: movies
        app.kubernetes.io/name: movies
        app.kubernetes.io/part-of: sa-p5
    spec:
      containers:
        - name: movies
          image: docker.io/zenthic22/movies:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet: { path: /healthz, port: http }
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet: { path: /healthz, port: http }
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits:   { cpu: "300m", memory: "256Mi" }
      imagePullSecrets:
        - name: regcred
