k8s/movies/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies
  namespace: sa-p5
  labels:
    app: movies
spec:
  selector:
    app: movies
  ports:
    - name: http
      port: 3000
      targetPort: http
  type: ClusterIP
